[workspace]
members = [
    "client",
    "server",
    "schemas",
]
resolver = "2"

[workspace.dependencies]
glob = "0.3.1"
tokio = { version = "1.34.0", features = ["full"] }
prost = "0.12.0"
prost-types = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tonic = "0.10.0"
tonic-health = "0.10.0"
anyhow = "1.0.69"